<resources>
    <string name="app_name">Wiki</string>
    <string name="search_hint">Search Wikipedia</string>
    <string name="search_icon">search_icon</string>
    <string name="voice_icon">voice_icon</string>
    <string name="recents">Recents</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="indian_cricketer">Indian Cricketer</string>
    <string name="search_to_know">Search to Know</string>
</resources>
